--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/RashmiKhanagwal/Backend-Assignment-Day-3/issues"
   },
-  "homepage": "https://github.com/RashmiKhanagwal/Backend-Assignment-Day-3#readme"
+  "homepage": "https://github.com/RashmiKhanagwal/Backend-Assignment-Day-3#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.4"
+  }
 }
